--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -17,7 +17,7 @@
         <!-- Name Column -->
         <ng-container matColumnDef="order-client-name">
           <th mat-header-cell *matHeaderCellDef> Клиент </th>
-          <td mat-cell *matCellDef="let order"> {{order.client.name}} </td>
+          <td mat-cell *matCellDef="let order"> {{order.client?.name}} </td>
         </ng-container>
         <ng-container matColumnDef="order-supply-datetime">
           <th mat-header-cell *matHeaderCellDef> Доставка </th>
