--- a/src/app/pages/services/list/list.component.html
+++ b/src/app/pages/services/list/list.component.html
@@ -15,10 +15,22 @@
           <td mat-cell *matCellDef="let service"> {{service.name}} </td>
         </ng-container>
 
-        <!-- Email Column -->
+        <!-- Price Column -->
         <ng-container matColumnDef="service-price">
           <th mat-header-cell *matHeaderCellDef> Цена </th>
           <td mat-cell *matCellDef="let service"> {{service.price}} </td>
+        </ng-container>
+
+        <!-- Date Column -->
+        <ng-container matColumnDef="service-date">
+          <th mat-header-cell *matHeaderCellDef> Дата </th>
+          <td mat-cell *matCellDef="let service"> {{service.updated_at ? (service.updated_at | date: 'yyyy-MM-dd HH:mm') : (service.created_at | date: 'yyyy-MM-dd HH:mm') }} </td>
+        </ng-container>
+
+        <!-- Date Column -->
+        <ng-container matColumnDef="service-user">
+          <th mat-header-cell *matHeaderCellDef> Пользователь </th>
+          <td mat-cell *matCellDef="let service"> {{service.updater.name ? service.updater.name : service.creator.name}} </td>
         </ng-container>
 
 
@@ -35,8 +47,8 @@
           </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="['service-name','service-price', 'service-actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['service-name','service-price', 'service-actions'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['service-name','service-price', 'service-date','service-user','service-actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['service-name','service-price', 'service-date', 'service-user', 'service-actions'];"></tr>
       </table>
 
     </div>
