--- a/src/app/pages/consumable/consumables/consumables.component.html
+++ b/src/app/pages/consumable/consumables/consumables.component.html
@@ -1,4 +1,4 @@
-<div class="mb-3 text-right" *ngIf="canPerformAction('create-tags')">
+<div class="mt-3 mb-3 text-right" *ngIf="canPerformAction('create-tags')">
   <button mat-raised-button color="primary" (click)="openCreateConsumableDialog()">Добавить</button>
 </div>
 
