--- a/src/app/pages/services/list/list.component.html
+++ b/src/app/pages/services/list/list.component.html
@@ -35,7 +35,7 @@
 
         <!-- Date Column -->
         <ng-container matColumnDef="service-date">
-          <th mat-header-cell *matHeaderCellDef> Дата </th>
+          <th mat-header-cell *matHeaderCellDef> Дата создания/изменения </th>
           <td mat-cell *matCellDef="let service"> {{service.updated_at ? (service.updated_at | date: 'yyyy-MM-dd HH:mm') : (service.created_at | date: 'yyyy-MM-dd HH:mm') }} </td>
         </ng-container>
 
