--- a/src/app/pages/inout/list/list.component.html
+++ b/src/app/pages/inout/list/list.component.html
@@ -35,6 +35,13 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Дата</th>
+    <td mat-cell *matCellDef="let row">
+      <span *ngIf="row.date">{{row.date}}</span>
+    </td>
+  </ng-container>
+
   <!-- Email Column -->
   <ng-container matColumnDef="qty">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Кол </th>
