--- a/src/app/pages/inout/operation/operation.component.html
+++ b/src/app/pages/inout/operation/operation.component.html
@@ -32,6 +32,17 @@
       </mat-error>
     </mat-form-field>
 
+    <mat-form-field class="w-100">
+      <mat-label>Дата</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="supply_date">
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+
+      <!-- <mat-error *ngIf="operationForm.controls['supply_date'].hasError('required')">
+        Поле обязательно
+      </mat-error> -->
+    </mat-form-field>
+
     <mat-form-field class="" *ngIf="operationForm.controls['type'].value == 1">
       <mat-label>Поставщик</mat-label>
       <mat-select formControlName="supplier_id">
