--- a/src/app/pages/suppliers/update-supplier-dialog/update-supplier-dialog.component.html
+++ b/src/app/pages/suppliers/update-supplier-dialog/update-supplier-dialog.component.html
@@ -10,11 +10,17 @@
       <mat-error *ngIf="supplierForm.controls['name'].hasError('required')">
         Поле обязательно
       </mat-error>
+      <mat-error *ngIf="supplierForm.controls['name'].hasError('serverError')">
+        {{ supplierForm.controls['name'].getError('serverError') }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="w-100">
       <mat-label>Адрес</mat-label>
       <input matInput formControlName="address" placeholder="">
+      <mat-error *ngIf="supplierForm.controls['address'].hasError('serverError')">
+        {{ supplierForm.controls['address'].getError('serverError') }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="w-100">
@@ -22,6 +28,9 @@
       <input matInput formControlName="website" placeholder="">
       <mat-error *ngIf="supplierForm.controls['website'].hasError('pattern')">
         Неверное значение (пр. https://google.com)
+      </mat-error>
+      <mat-error *ngIf="supplierForm.controls['website'].hasError('serverError')">
+        {{ supplierForm.controls['website'].getError('serverError') }}
       </mat-error>
     </mat-form-field>
 
@@ -125,7 +134,7 @@
 
   </div>
   <div mat-dialog-actions>
-    <button mat-flat-button color="danger" (click)="onCancel()">Отмена</button>
+    <button mat-flat-button color="warn" (click)="onCancel()">Отмена</button>
     <button mat-flat-button color="primary" [class.spinner]="formSubmitting" type="submit"
             [disabled]="supplierForm.invalid || formSubmitting" (click)="onSubmit()">Сохранить
     </button>
