--- a/src/app/pages/services/list/list.component.html
+++ b/src/app/pages/services/list/list.component.html
@@ -45,6 +45,11 @@
           <td mat-cell *matCellDef="let service"> {{service.updater?.name ? service.updater.name : service.creator?.name}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="service-sort">
+          <th mat-header-cell *matHeaderCellDef> Сортировка </th>
+          <td mat-cell *matCellDef="let service"> {{ service.sort }} </td>
+        </ng-container>
+
 
         <ng-container matColumnDef="service-actions">
           <th mat-header-cell *matHeaderCellDef> </th>
@@ -59,8 +64,8 @@
           </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="['service-name','service-price', 'service-date','service-user','service-actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['service-name','service-price', 'service-date', 'service-user', 'service-actions'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['service-name','service-price', 'service-date','service-user', 'service-sort', 'service-actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['service-name','service-price', 'service-date', 'service-user', 'service-sort', 'service-actions'];"></tr>
       </table>
 
     </div>
