--- a/src/app/pages/orders/order-item/order-item.component.html
+++ b/src/app/pages/orders/order-item/order-item.component.html
@@ -9,7 +9,7 @@
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #deliveryMenu="matMenu">
-          <button mat-menu-item (click)="openCalculationDialog(order.id)">
+          <button mat-menu-item (click)="openCalculationDialog(order.uuid)">
             <mat-icon>text_ad</mat-icon>
             <span>Посмтреть счет</span>
           </button>
