--- a/src/app/pages/inout/list/list.component.html
+++ b/src/app/pages/inout/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="mb-3 text-right" *ngIf="canPerformAction('create-tags')">
+<div class="mt-3 mb-3 text-right" *ngIf="canPerformAction('create-tags')">
   <button mat-raised-button color="primary" (click)="openOperation()">Добавить операцию</button>
 </div>
 
@@ -35,13 +35,6 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Дата</th>
-    <td mat-cell *matCellDef="let row">
-      <span *ngIf="row.date">{{row.date}}</span>
-    </td>
-  </ng-container>
-
   <!-- Email Column -->
   <ng-container matColumnDef="qty">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Кол </th>
@@ -49,13 +42,27 @@
   </ng-container>
 
   <ng-container matColumnDef="price_per_unit">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Цена за ед. </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-nowrap"> Цена за ед. </th>
     <td mat-cell *matCellDef="let row"> {{row.price_per_unit}} </td>
   </ng-container>
 
   <ng-container matColumnDef="total_price">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Сумма. </th>
     <td mat-cell *matCellDef="let row"> {{ row.price_per_unit ? sum(row.qty, row.price_per_unit) : '' }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="created_at">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Дата создания</th>
+    <td mat-cell *matCellDef="let row">
+      <span *ngIf="row.created_at">{{ row.created_at | date: 'yyyy-MM-dd' }}</span>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="delivery_date">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Дата оплаты</th>
+    <td mat-cell *matCellDef="let row">
+      <span *ngIf="row.delivery_date">{{ row.delivery_date | date: 'yyyy-MM-dd' }}</span>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
