--- a/src/app/pages/inout/waitings/waitings.component.html
+++ b/src/app/pages/inout/waitings/waitings.component.html
@@ -32,20 +32,33 @@
     </td>
   </ng-container>
 
-  <!-- Email Column -->
   <ng-container matColumnDef="qty">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Кол </th>
     <td mat-cell *matCellDef="let row"> {{row.qty}} {{UNIT_SHORT[row.consumable.unit]}} </td>
   </ng-container>
 
   <ng-container matColumnDef="price_per_unit">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Цена за ед. </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-nowrap"> Цена за ед. </th>
     <td mat-cell *matCellDef="let row"> {{row.price_per_unit}} </td>
   </ng-container>
 
   <ng-container matColumnDef="total_price">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Сумма. </th>
     <td mat-cell *matCellDef="let row"> {{ sum(row.qty, row.price_per_unit) }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="created_at">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Дата создания</th>
+    <td mat-cell *matCellDef="let row">
+      <span *ngIf="row.created_at">{{ row.created_at | date: 'yyyy-MM-dd' }}</span>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="delivery_date">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Дата оплаты</th>
+    <td mat-cell *matCellDef="let row">
+      <span *ngIf="row.delivery_date">{{ row.delivery_date | date: 'yyyy-MM-dd' }}</span>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="delivery">
