--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-// If you want to override variables do it here
+// If you want to override variables do it here1
 @import "variables";
 
 $enable-ltr: true;
