--- a/src/scss/app-styles.css
+++ b/src/scss/app-styles.css
@@ -37,3 +37,6 @@
   border-top-color: #000000;
   animation: spinner .8s linear infinite;
 }
+.mat-vertical-content-container {
+margin-left: 1px;
+}
