--- a/src/app/pages/clients/update-client-dialog/update-client-dialog.component.html
+++ b/src/app/pages/clients/update-client-dialog/update-client-dialog.component.html
@@ -167,7 +167,7 @@
 
   </div>
   <div mat-dialog-actions>
-    <button mat-flat-button color="danger" (click)="onCancel()">Отмена</button>
+    <button mat-flat-button color="warn" (click)="onCancel()">Отмена</button>
     <button mat-flat-button color="primary" [class.spinner]="formSubmitting" type="submit"
             [disabled]="clientForm.invalid || formSubmitting" (click)="onSubmit()">Сохранить
     </button>
