--- a/src/app/pages/consumable/consumables/create-consumable-dialog/create-consumable-dialog.component.html
+++ b/src/app/pages/consumable/consumables/create-consumable-dialog/create-consumable-dialog.component.html
@@ -129,7 +129,7 @@
 
   </div>
   <div mat-dialog-actions>
-    <button mat-flat-button color="danger" (click)="onCancel()">Отмена</button>
+    <button mat-flat-button color="warn" (click)="onCancel()">Отмена</button>
     <button mat-flat-button color="primary" [class.spinner]="formSubmitting" (click)="onSubmit()" type="submit"
             [disabled]=" formSubmitting">Сохранить
     </button>
