--- a/src/app/pages/orders/create-order-dialog/create-order-dialog.component.html
+++ b/src/app/pages/orders/create-order-dialog/create-order-dialog.component.html
@@ -323,7 +323,7 @@
     </mat-stepper>
   </div>
   <div mat-dialog-actions>
-    <button mat-flat-button color="danger">Отмена</button>
+    <button mat-flat-button color="warn">Отмена</button>
     <button mat-flat-button color="primary" type="submit">Сохранить</button>
   </div>
 </form>
