--- a/src/app/pages/services/create-service-dialog/create-service-dialog.component.html
+++ b/src/app/pages/services/create-service-dialog/create-service-dialog.component.html
@@ -229,7 +229,7 @@
     </mat-card>
   </div>
   <div mat-dialog-actions>
-    <button mat-flat-button color="danger" (click)="onCancel()">Отмена</button>
+    <button mat-flat-button color="warn" (click)="onCancel()">Отмена</button>
   <button mat-flat-button color="primary" (click)="onSubmit()" [class.spinner]="formSubmitting" type="submit" [disabled]="serviceForm.invalid || formSubmitting">Сохранить</button>
   </div>
 </form>
