--- a/src/app/pages/roles/create-role-dialog/create-role-dialog.component.html
+++ b/src/app/pages/roles/create-role-dialog/create-role-dialog.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div mat-dialog-actions>
-    <button mat-flat-button color="danger" (click)="onCancel()">Отмена</button>
+    <button mat-flat-button color="warn" (click)="onCancel()">Отмена</button>
     <button mat-flat-button color="primary" [class.spinner]="formSubmitting" type="submit" [disabled]="roleForm.invalid || formSubmitting">Сохранить</button>
   </div>
 </form>
