--- a/src/app/pages/users/components/create-user-dialog/create-user-dialog.component.html
+++ b/src/app/pages/users/components/create-user-dialog/create-user-dialog.component.html
@@ -48,7 +48,7 @@
 
   </div>
   <div mat-dialog-actions>
-    <button mat-flat-button color="danger" (click)="onCancel()">Отмена</button>
+    <button mat-flat-button color="warn" (click)="onCancel()">Отмена</button>
     <button mat-flat-button color="primary" [class.spinner]="formSubmitting" type="submit" [disabled]="userForm.invalid || formSubmitting">Сохранить</button>
   </div>
 </form>
